--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.idea/checkstyle-idea.xml
+/.idea/compiler.xml
+/target/classes/input.json
+/target/test-classes/input.json
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/sixthTask.iml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
